create github pages

--- a/page1.html
+++ b/page1.html
@@ -31,7 +31,7 @@
 <script type="text/javascript">
     (function () {
         var options = {
-            whatsapp: "11960442444", // WhatsApp number
+            whatsapp: "+55 11960442444", // WhatsApp number
             call_to_action: "ola! Posso te Ajuda?", // Call to action
             position: "left", // Position may be 'right' or 'left'
         };
@@ -67,7 +67,7 @@
                          <img src="assets/images/icone4-200x205.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://sabonetesartesanais.com">APOSTILA DE SABONETES E PRODUTOS ARTESANAIS&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="http://sabonetesartesanais.com">APOSTILA DE SABONETES E PRODUTOS ARTESANAIS&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
 
     
 
