--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="cid-ryvGrbrShD" id="image3-p">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-ryvGrbrShD" id="image3-p">
 
     
 
