create github pages

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
-                         <img src="assets/images/icone4-200x205.png" alt="Mobirise" title="" style="height: 4rem;">
+                    <a href="index.html">
+                         <img src="assets/images/cpia-de-cpia-de-cpia-de-cpia-de-cpia-de-programas-afiliado-124x124.png" alt="Mobirise" title="" style="height: 4rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="http://sabonetesartesanais.com">APOSTILA DE SABONETES E PRODUTOS ARTESANAIS&nbsp;</a></span>
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-ryvGrbrShD" id="image3-p">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-ryvGrbrShD" id="image3-p">
 
     
 
