--- a/page1.html
+++ b/page1.html
@@ -63,8 +63,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
-                         <img src="assets/images/icone4-200x205.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                    <a href="index.html">
+                         <img src="assets/images/cpia-de-cpia-de-cpia-de-cpia-de-cpia-de-programas-afiliado-124x124.png" alt="Mobirise" title="" style="height: 4rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="http://sabonetesartesanais.com">APOSTILA DE SABONETES E PRODUTOS ARTESANAIS&nbsp;</a></span>
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
 
     
 
