create github pages

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="cid-ryvGrbrShD" id="image3-p">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="cid-ryvGrbrShD" id="image3-p">
 
     
 
     <figure class="mbr-figure">
             <div class="image-block" style="width: 100%;">
-                <a href="https://sun.eduzz.com/260269?utm_content=primeiro%20bot%C3%A3o" target="_blank"><img src="assets/images/apostila-do-sabonete-artesanal-passos-receitas-incrveis.-2220x1074.png" width="1400" alt="Mobirise" title=""></a>
+                <a href="https://sun.eduzz.com/260269?utm_content=primeiro%20bot%C3%A3o"><img src="assets/images/apostila-do-sabonete-artesanal-com-passos-receitas-incrveis.-2480x1200.png" width="1400" alt="Mobirise" title=""></a>
                 
             </div>
     </figure>
