create github pages

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="cid-ryvGrbrShD" id="image3-p">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-ryvGrbrShD" id="image3-p">
 
     
 
@@ -177,7 +177,7 @@
                         </div>
 
                         <div class="card-text">
-                            <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">Mais de 1400 Alunos</h3>
+                            <h3 class="count pt-3 pb-3 mbr-fonts-style display-5">+ De 1400</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">
                                 Satisfação Garantida!</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
