create github pages

--- a/page1.html
+++ b/page1.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
 
     
 
