--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <script type="text/javascript">
     (function () {
         var options = {
-            whatsapp: "+55 11960442444", // WhatsApp number
+            whatsapp: "+55 11960138169", // WhatsApp number
             call_to_action: "ola! Posso te Ajuda?", // Call to action
             position: "left", // Position may be 'right' or 'left'
         };
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
 
     
 
@@ -953,12 +953,12 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_33" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_36" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-5">
                                         <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Vocês Indicam onde comprar os materias.</h4>
                                 </a>
                             </div>
-                            <div id="collapse1_33" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_36" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        Sim, Ao comprar esta apostila você leva gratuitamente forma de Bônus um Guia Onde tem os Melhores Fornecedores de Materia Prima para fabricação de sabonetes artesanais e produtos Aromaterapeuticos.</p>
@@ -967,12 +967,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_33" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_36" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-5">As receitas são naturais?</h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_33" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_36" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        Sim, muitas das receitas são a base de glicerina vegetal ou veganas natural onde podera usar sua criatividade e adcionar extratos, ervas, sementes, as possibilidades são muitas...</p>
@@ -981,11 +981,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_33" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_36" aria-expanded="false" aria-controls="collapse3">
                                     <h4 class="mbr-fonts-style display-5">Qualquer pessoa pode fazer sabonetes?</h4>
                                 </a>
                             </div>
-                            <div id="collapse3_33" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_36" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Sim! Basta Seguir o Passo a Passo Receita como uma receita de bolo tudo detalhado&nbsp;</p>
                                 </div>
@@ -993,11 +993,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_33" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_36" aria-expanded="false" aria-controls="collapse4">
                                     <h4 class="mbr-fonts-style display-5">Em quanto tempo eu recebo as apostilas?</h4>
                                 </a>
                             </div>
-                            <div id="collapse4_33" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse4_36" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Se for pagamento por cartão de credito você recebe imediatamente no mesmo dia. alem disso não precisa pegar&nbsp;filas em lotericas ou banco. 
 <br>se for por boleto bancario voce terá que esperar até 3 dias após a confirmaçao da plataforma voce receberá.</p>
@@ -1006,11 +1006,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_33" aria-expanded="false" aria-controls="collapse5">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_36" aria-expanded="false" aria-controls="collapse5">
                                     <h4 class="mbr-fonts-style display-5">A compra é&nbsp;segura?</h4>
                                 </a>
                             </div>
-                            <div id="collapse5_33" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse5_36" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        Sim. extremamente seguro o pagamento é realizado atrávez da plataforma de pagamentos EDUZZ onde passar por um dos mais seguro servidores de pagamentos do Brasil. Segurança rigorosa para os clientes.</p>
@@ -1019,11 +1019,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_33" aria-expanded="false" aria-controls="collapse6">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_36" aria-expanded="false" aria-controls="collapse6">
                                     <h4 class="mbr-fonts-style display-5">Que tipo de receitas tem na Apostila?</h4>
                                 </a>
                             </div>
-                            <div id="collapse6_33" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse6_36" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        Na apostila voce vai encontrar tem receitas Sabonetes fitoterápicos, anti-rugas, anti-celulite, esfoliante, para limpeza facial, de argila, rejuvenescedores, clareadores, veganos incluindo os bonus com receitas de shampoo, creme, repelente, oleos, e muito outros...</p>
@@ -1052,11 +1052,11 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_34" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_37" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-5">Utiliza Soda Caústica nas Receitas?</h4>
                                 </a>
                             </div>
-                            <div id="collapse1_34" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_37" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        Não, a soda caústica é ultilizada no processo a frio conhecido como COLD PROCESS.</p>
@@ -1065,12 +1065,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_34" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_37" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-5">Tem fornecedor de Base Vegana e Organica 100% Natural?</h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_34" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_37" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        Sim, Temos uma fornecedora secreta com exelente base Vegana de coco e Organica 100% Natural. e Oleos Essenciais com tabela de Distribuidor somente para Alunos da Apostila do sabonete artesanal passo passo + receitas.</p>
@@ -1079,11 +1079,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_34" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_37" aria-expanded="false" aria-controls="collapse3">
                                     <h4 class="mbr-fonts-style display-5">Posso pagar no boleto bancario</h4>
                                 </a>
                             </div>
-                            <div id="collapse3_34" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_37" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Sim, Basta clicar no botão comprar vai abrir a pagina de checkout de pagamento bem simples basta clicar boleto e inserir os dados que pede. lembrando que pagamento por boleto voce so recebe dentro de um prazo de até 3 dias uteis.&nbsp;</p>
                                 </div>
@@ -1241,7 +1241,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
