create github pages

--- a/page1.html
+++ b/page1.html
@@ -77,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a site</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
 
     
 
