create github pages

--- a/page1.html
+++ b/page1.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -62,7 +61,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section content4 cid-rB9Xlwkiqb" id="content4-1i">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content4 cid-rB9Xlwkiqb" id="content4-1i">
 
     
 
