create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content4 cid-rB9Xlwkiqb" id="content4-1i">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section content4 cid-rB9Xlwkiqb" id="content4-1i">
 
     
 
@@ -206,7 +206,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 &nbsp;- Todos os direitos Reservado - Apostila do Sabonete Artesanal Passo a Passo + Receitas</p>
+                    © Copyright 2019 &nbsp;- Todos os direitos Reservado - Apostila do Sabonete Artesanal Passo a Passo + Receitas&nbsp;<br><br>Site Protegido - Site Seguro&nbsp;</p>
             </div>
         </div>
     </div>
