create github pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
 
     
 
