create github pages

--- a/page2.html
+++ b/page2.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">website maker</a></section><section class="cid-rH9thjoZan" id="image3-1s">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="cid-rH9thjoZan" id="image3-1s">
 
     
 
