create github pages

--- a/page1.html
+++ b/page1.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-rB9vPlOl9X" id="header2-1d">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section class="cid-rB9vPlOl9X" id="header2-1d">
 
     
 
